--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,14 @@
 
     <application
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Broadcast">
+        android:theme="@style/Theme.Broadcast"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -29,13 +29,20 @@
         <activity
             android:name=".Details"
             android:exported="false">
+
+        </activity>
+        <activity
+            android:name=".SendMessage"
+            android:exported="false">
+
         </activity>
 
         <service
             android:name=".GetMessage"
             android:exported="false"
-            android:process=":remote_service"
-            android:foregroundServiceType="dataSync">
+            android:foregroundServiceType="dataSync"
+            android:process=":remote_service">
+
         </service>
     </application>
 
